@@ -271,7 +271,8 @@ dependent types.
 </FONT>&nbsp;
 A package containing various parsing combinators. There are also some
 parsers built on top of the parsing combinators in the package that make
-essential use of lazy evaluation.
+essential use of lazy evaluation. This package has now been incorporated
+into $ATSHOME/contrib.
 <P>
 
 <FONT size="+0">
