@@ -9,7 +9,7 @@
 /*
 ** ATS - Unleashing the Power of Types!
 **
-** Copyright (C) 2002-2009 Hongwei Xi.
+** Copyright (C) 2002-2010 Hongwei Xi.
 **
 ** ATS is  free software;  you can redistribute it and/or modify it under
 ** the  terms of the  GNU General Public License as published by the Free
@@ -45,27 +45,26 @@
 
 /* ****** ****** */
 
-/*
-
+#if(0)
 //
-// the following macros cannot be used due to the
-// [extern] declarations generated by [atscc]
+// HX-2010-10-8: these will also work:
 //
 #define atslib_WIFEXITED(status) WIFEXITED(status)
 #define atslib_WIFSIGNALED(status) WIFSIGNALED(status)
 #define atslib_WIFSTOPPED(status) WIFSTOPPED(status)
-
+//
 #define atslib_WEXITSTATUS(status) WEXITSTATUS(status)
 #define atslib_WTERMSIG(status) WTERMSIG(status)
 #define atslib_WSTOPSIG(status) WSTOPSIG(status)
-
-*/
+//
+#endif // end of [#if(0)]
 
 /* ****** ****** */
 
 ATSinline()
 ats_int_type
-atslib_WIFEXITED (ats_int_type status) { return WIFEXITED(status) ; }
+atslib_WIFEXITED
+  (ats_int_type status) { return WIFEXITED(status) ; }
 // end of [atslib_WIFEXITED]
 
 ATSinline()
@@ -78,7 +77,8 @@ atslib_WEXITSTATUS
 
 ATSinline()
 ats_int_type
-atslib_WIFSIGNALED (ats_int_type status) { return WIFSIGNALED(status) ; }
+atslib_WIFSIGNALED
+  (ats_int_type status) { return WIFSIGNALED(status) ; }
 // end of [atslib_WIFSIGNALED]
 
 ATSinline()
@@ -91,7 +91,8 @@ atslib_WTERMSIG
 
 ATSinline()
 ats_int_type
-atslib_WIFSTOPPED (ats_int_type status) { return WIFSTOPPED(status) ; }
+atslib_WIFSTOPPED
+  (ats_int_type status) { return WIFSTOPPED(status) ; }
 // end of [atslib_WIFSTOPPED]
 
 ATSinline()
@@ -104,19 +105,10 @@ atslib_WSTOPSIG
 
 ATSinline()
 ats_pid_type
-atslib_wait
-  (ats_ref_type status) { return wait ((int*)status) ; }
-/* end of [atslib_wait] */
+wait_null () { return wait((int*)0) ; }
 
-ATSinline()
-ats_pid_type
-atslib_waitpid (
-  ats_pid_type chldpid
-, ats_ref_type status
-, ats_int_type options
-) { 
-  return waitpid ((pid_t)chldpid, (int*)status, (int)options) ;
-} /* end of [atslib_waitpid] */
+#define atslib_wait wait
+#define atslib_waitpid waitpid
 
 /* ****** ****** */
 
