@@ -48,13 +48,12 @@ staload "libc/sys/SATS/types.sats"
 absprop WIFEXITED_p (s: int, i: int)
 
 fun WIFEXITED {s:int}
-  (status: int s): [i:int] (WIFEXITED_p (s, i) | int i)
+  (status: int s): [i:nat] (WIFEXITED_p (s, i) | int i)
   = "atslib_WIFEXITED"
 // end of [WIFEXITED]
 
-fun WEXITSTATUS {s:int}
-  {i:int | i <> 0} (pf: WIFEXITED_p (s, i) | status: int s): int
-  = "atslib_WEXITSTATUS"
+fun WEXITSTATUS {s:int} {i:int | i > 0}
+  (pf: WIFEXITED_p (s, i) | status: int s): int = "atslib_WEXITSTATUS"
 // end of [WEXITSTATUS]
 
 (* ****** ****** *)
@@ -66,9 +65,8 @@ fun WIFSIGNALED {s:int}
   = "atslib_WIFSIGNALED"
 // end of [WIFSIGNALED]
 
-fun WTERMSIG {s:int}
-  {i:int | i <> 0} (pf: WIFSIGNALED_p (s, i) | status: int s): int
-  = "atslib_WTERMSIG"
+fun WTERMSIG {s:int} {i:int | i > 0}
+  (pf: WIFSIGNALED_p (s, i) | status: int s): int = "atslib_WTERMSIG"
 // end of [WTERMSIG]
 
 (* ****** ****** *)
@@ -76,23 +74,23 @@ fun WTERMSIG {s:int}
 absprop WIFSTOPPED_p (s: int, i: int)
 
 fun WIFSTOPPED {s:int}
-  (status: int s): [i:int] (WIFSTOPPED_p (s, i) | int i)
+  (status: int s): [i:nat] (WIFSTOPPED_p (s, i) | int i)
   = "atslib_WIFSTOPPED"
 // end of [WIFSTOPPED]
 
 fun WSTOPSIG {s:int}
-  {i:int | i <> 0} (pf: WIFSTOPPED_p (s, i) | status: int s): int
+  {i:int | i > 0} (pf: WIFSTOPPED_p (s, i) | status: int s): int
   = "atslib_WSTOPSIG"
 // end of [WSTOPSIG]
 
 (* ****** ****** *)
 
-fun wait (status: &Int? >> Int): pid_t = "atslib_wait"
+fun wait_null (): pid_t = "atslib_wait_null"
+fun wait (status: &int? >> int): pid_t = "#atslib_wait" // !macro
 
 (* ****** ****** *)
 
 abst@ype waitopt_t = $extype "ats_int_type"
-
 macdef WNOHANG = $extval (waitopt_t, "WNOHANG")
 macdef WUNTRACED = $extval (waitopt_t, "WUNTRACED")
 macdef WNONE = $extval (waitopt_t, "0") // default value for [waitopt_t]
@@ -105,7 +103,7 @@ overload lor with lor_waitopt_waitopt
 
 fun waitpid
   (chldpid: pid_t, status: &int? >> int, options: waitopt_t): pid_t
-  = "atslib_waitpid"
+  = "#atslib_waitpid" // macro!
 // end of [waitpid]
 
 (* ****** ****** *)
